--- a/src/App.css
+++ b/src/App.css
@@ -6,20 +6,44 @@
   font-family: 'Nunito Sans', Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
 }
 
-.App .Logo {
+.App .Header {
+  display: flex;
+}
+
+.App .Header .Header-link {
+  align-self: center;
+}
+
+.App .Header .Logo {
   font-family: Montserrat, Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
   font-weight: 700;
 }
 
-.App .Logo img {
+.App .Header .Logo img {
   width: 1.5em;
 }
 
-.App .Logo .subtitle {
+.App .Header .Logo .subtitle {
   font-weight: 200;
   font-size: 0.8em;
   margin-left: 1em;
   display: inline-block;
+}
+
+.App .Header .Install {
+  align-self: center;
+  margin-left: 2em;
+}
+
+.App .Header .market-selector {
+  align-self: center;
+  margin-left: auto;
+  font-size: 1.2em;
+}
+
+.App .Footer {
+  display: flex;
+  padding-right: 0;
 }
 
 .App .Footer a img {
@@ -28,4 +52,18 @@
 
 .App .Footer a:hover img, .App .Footer a:active img {
   opacity: 1;
+}
+
+.App .Footer .links {
+  margin-left: auto;
+  align-self: center;
+}
+
+.App .Footer .links * {
+  margin-left: 2em;
+}
+
+.App .Footer a {
+  color: inherit;
+  text-decoration: inherit;
 }
