Feature - Switch host to mainnet & update styling (#2)
* add color to CTA, icons to links, and update mainnet host

* format table elements with coloring

* update icons and link to docs instead of GH

* update username and password as params on App

* update css class names

* add default to switch so browser console doesn't warn

* add analytics tracking

* address PR feedback

--- a/src/App.css
+++ b/src/App.css
@@ -59,11 +59,27 @@
   align-self: center;
 }
 
-.App .Footer .links * {
+.App .Footer .links .link-item {
   margin-left: 2em;
 }
 
 .App .Footer a {
   color: inherit;
   text-decoration: inherit;
+}
+
+.App .bid-sig-digits {
+  color: green;
+}
+
+.App .ask-sig-digits {
+  color: red;
+}
+
+.App .depth-sig-digits {
+  color: black;
+}
+
+.App .non-sig-digits {
+  color: gray;
 }
