--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,12 @@
   background: none;
 }
 
+.App .Header .Install a:hover .button {
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: -1px;
+}
+
 .App .Header .market-selector {
   align-self: center;
   margin-left: auto;
